# holy-cors

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: config.rs  cors.rs  main.rs  proxy.rs
